--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "karma start"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^4.5.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
